# RAG

./: main.py  requirements.txt
backend/: README.md  main.py  pyproject.toml
backend/src/config/: embeddings.py  llm.py
backend/src/loaders/: csv_loader.py  pdf_loader.py  webloader.py
backend/src/routes/: csv_upload_routes.py  web_loader_route.py
backend/src/schema/: chat_schema.py
backend/src/service/: csv_service.py  rag_service.py
backend/src/vectordb/: vectordb.py
src/loaders/: csv_loader.py  pdf_loader.py
src/routes/: csv_upload_routes.py  rag_routes.py  upload_routes.py  web_loader_route.py
src/schema/: chat_schema.py
src/service/: pdf_service.py  rag_service.py
src/utils/: deletefile.py
